image ok, bug js, ok contrast ok, blackhat corriger

--- a/style.css
+++ b/style.css
@@ -13,6 +13,10 @@ button {
     outline: none!important;
 }
 
+.color-primary {
+    color: #F3976C;
+}
+
 a:hover {
     text-decoration: none;
     cursor: pointer;
@@ -664,7 +668,7 @@ label,
 a {
     font-family: "helvetica";
     font-weight: 400;
-    color: black!important;
+    color: black;
 }
 
 .container {
@@ -672,7 +676,11 @@ a {
 }
 
 .hero-bloc-text {
-    font-size: 38px;
+    font-size: 42px;
+}
+
+.size {
+    font-size: 17px;
 }
 
 .hero-bloc-text-sub {
@@ -729,6 +737,7 @@ h3 {
     color: #333333!important;
 }
 
+
 .med-width-whitespace {
     max-width: 800px;
     margin: auto auto auto auto;
@@ -736,11 +745,16 @@ h3 {
 }
 
 h1 {
-    color: #333333!important;
+    color: #333333;
 }
 
 h4 {
     color: #333333!important;
+}
+
+.mentions {
+    text-align: center;
+    margin-top: 10px;
 }
 
 .icons {
@@ -766,7 +780,7 @@ h4 {
 }
 
 .black-background {
-    background-color: rgba(165, 147, 99, 0.7);
+    background-color: rgba(0, 0, 0, 0.7);
     padding: 40px 40px 40px 40px;
 }
 
@@ -788,7 +802,7 @@ h4 {
 }
 
 .tc-white {
-    color: #F3976C!important;
+    color: black!important;
 }
 
 .btn-atomic-tangerine {
